--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <fieldset class="newsletter">
       <legend>Newsletter</legend>
 
-      <p>Select the newsletters your would like to receive</p>
+      <p>Select the newsletters you would like to receive</p>
         <input type="checkbox" id="html_news" value="html_news" name="user_html_news"><label for="html_news">HTML News</label><br>
         <input type="checkbox" id="css_news" value="css_news" name="user_css_news"><label for="css_news">CSS News</label><br>
         <input type="checkbox" id="javascript_news" value="javascript_news" name="user_javascript_news"><label for="javascript_news">Javascript News</label>
