--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <hr class="hr-2">
 
     <fieldset class="contact-information">
-      <legend>Contact Information</legend><br class="hide-br">
+      <legend>Contact Information</legend><br class="hide-br"> <!-- Display br @ 768px or wider -->
 
       <label for="name">Full Name</label>
       <input type="text" id="name" name="user_name" required placeholder="Required">
